--- a/src/main/resources/templates/DeliveryInformation.html
+++ b/src/main/resources/templates/DeliveryInformation.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8"></meta>
-    <title>Order Form</title>
+    <title>Delivery Information</title>
 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"></link>
@@ -16,18 +16,20 @@
 </head>
 <body>
 
-<div class="container">
+<div class="conteiner">
     <div class="row">
         <div class="col-md-4 col-md-offset-4">
-            <form action="/PizzaOrder" method="get">
-                <h2>Order Pizza</h2>
-                <div th:each="s : ${size}" class="form-group">
-                     <span th:text="${s}"></span>
-                    <input type="radio" name="size" th:value="${s}" class="form-control"></input>
-                </div>
-                <br></br>
-                <input class="btn btn-default btn-lg" type="submit"></input>
-            </form>
+            <div class="form-group">
+                <form action="/AddressInformation" method="post">
+                    <h2>Delivery Info</h2>
+                    <label>Name:</label>
+                    <input class="form-control" type="text" name="clientName"></input>
+                    <br></br>
+                    <label>Address:</label>
+                    <input class="form-control" type="text" name="clientAddress"></input>
+                    <input class="btn btn-default btn-lg" type="submit"></input>
+                </form>
+            </div>
         </div>
     </div>
 </div>
